...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileCreation">

    <EditText
        android:id="@+id/courseInput3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course4"
        android:inputType="textCapCharacters|textCapWords|textCapSentences"
        app:layout_constraintEnd_toStartOf="@+id/courseInput4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseInput0" />

    <EditText
        android:id="@+id/courseInput4"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course5"
        android:inputType="textCapCharacters|textCapWords|textCapSentences"
        app:layout_constraintEnd_toStartOf="@+id/courseInput5"
        app:layout_constraintStart_toEndOf="@+id/courseInput3"
        app:layout_constraintTop_toBottomOf="@+id/courseInput1" />

    <EditText
        android:id="@+id/courseInput5"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
...
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course6"
        android:inputType="textCapCharacters|textCapWords|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/courseInput4"
        app:layout_constraintTop_toBottomOf="@+id/courseInput2" />

    <EditText
        android:id="@+id/courseInput1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
...
        android:ems="10"
        android:hint="@string/course2"
        android:inputType="textCapCharacters|textCapWords|textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/courseInput4"
        app:layout_constraintEnd_toStartOf="@+id/courseInput2"
        app:layout_constraintStart_toEndOf="@+id/courseInput0"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/courseInput0"
        android:layout_width="110dp"
...
        app:layout_constraintBottom_toTopOf="@+id/courseInput5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/courseInput1"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <EditText
        android:id="@+id/uniInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/university"
        android:inputType="text|textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/interestInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseInput4"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
...
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/interest"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/studyLocationInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uniInput" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
...
        android:paddingRight="11dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <EditText
        android:id="@+id/studyLocationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
...
