...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchMaking">

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fullName"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/photoDisplay"
        app:layout_constraintEnd_toStartOf="@+id/contactsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/settingsButton"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/photoDisplay"
        android:layout_width="0dp"
        android:layout_height="301dp"
        app:layout_constraintBottom_toTopOf="@+id/locationDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDisplay"
        app:layout_constraintVertical_chainStyle="spread_inside">

...
        android:id="@+id/locationDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/courseDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoDisplay" />

    <TextView
        android:id="@+id/courseDisplay"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationDisplay" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
...
        android:drawableLeft="@drawable/ic_close_black_24dp"
        android:drawablePadding="5dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yesButton"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseDisplay" />

    <Button
        android:id="@+id/yesButton"
...
