...
    <string name="course3">Course 3</string>
    <string name="course4">Course 4</string>
    <string name="course5">Course 5</string>
    <string name="course6">Course 6</string>
    <string name="university">University</string>
    <string name="studyLocation">Preferred Study Location</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="interest">Interest</string>
    <string name="fullName">First, Last</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="courses">Course1, Course2</string>
    <string name="location">Location</string>
    <string name="accountCreation">Create an Account</string>
    <string name="facebook_app_id">1149383881901875</string>
    <string name="fb_login_protocol_scheme">fb1149383881901875</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="matches">Matches</string>
...
