...
        android:drawablePadding="5dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createAccount"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
